<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="350dp">

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:progressBackgroundTint="@color/color_gris"
        android:progressTint="@color/color_blanco" />

    <Chronometer
        android:id="@+id/cronometro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:textColor="@color/color_blanco"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/songDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_blanco"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/seekBar"
        android:layout_marginEnd="10dp"
        android:text="mm:ss" />

    <ImageButton
        android:id="@+id/button_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/color_trasparente"
        android:contentDescription="@string/d_image_button_next"
        android:src="@drawable/ic_media_next"
        android:tint="@color/color_blanco" />

    <ImageButton
        android:id="@+id/button_aleatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="90dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/color_trasparente"
        android:contentDescription="@string/d_image_button_shuffle"
        android:src="@drawable/ic_media_shuffle"
        android:tint="@color/color_gris" />

    <ImageButton
        android:id="@+id/button_play_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/color_trasparente"
        android:contentDescription="@string/d_image_button_play_pause"
        android:src="@drawable/ic_media_play"
        android:tint="@color/color_blanco" />

    <ImageButton
        android:id="@+id/button_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/seekBar"
        android:layout_marginTop="30dp"
        android:layout_marginStart="60dp"
        android:backgroundTint="@color/color_trasparente"
        android:contentDescription="@string/d_image_button_previous"
        android:src="@drawable/ic_media_previous"
        android:tint="@color/color_blanco" />

    <ImageButton
        android:id="@+id/button_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/seekBar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:layout_below="@+id/seekBar"
        android:backgroundTint="@color/color_trasparente"
        android:contentDescription="@string/d_image_button_repeat"
        android:src="@drawable/ic_media_repeat_all"
        android:tint="@color/color_gris" />

    <TextView
        android:id="@+id/textTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/buttonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_fab_exit"
        android:background="@color/color_trasparente"
        android:tint="@color/color_blanco"/>

</RelativeLayout>